--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -44,4 +44,8 @@ body {
   color: white;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
