--- a/src/components/card/styles.module.scss
+++ b/src/components/card/styles.module.scss
@@ -1,5 +1,30 @@
+@import "../../styles/variables.scss";
+
 .card {
-  width: 10rem;
-  height: 10rem;
-  background-color: black;
+  width: 700px;
+  height: 12rem;
+  background-color: $color-secondary-600;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 1rem;
+  box-shadow: 10 20 1rem rgba(0, 0, 0, 0.5);
+
+  header {
+    color: $color-primary;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+
+  p::before,
+  p::after {
+    content: "“";
+  }
+
+  p {
+    font-size: $font-size-xl;
+    font-weight: $font-weight-bold;
+  }
 }
