--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,7 +45,16 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  padding: 1rem;
+  font-size: 0.8rem;
+  color: $color-accent;
 }
