[FIX] Adjusted card styling :bug:

--- a/src/components/card/styles.module.scss
+++ b/src/components/card/styles.module.scss
@@ -2,7 +2,7 @@
 
 .card {
   width: 700px;
-  height: 12rem;
+  height: fit-content;
   background-color: $color-secondary-600;
   padding: 1rem;
   display: flex;
@@ -16,6 +16,7 @@
     color: $color-primary;
     text-transform: uppercase;
     font-weight: 400;
+    letter-spacing: 1px;
   }
 
   p::before,
@@ -25,6 +26,13 @@
 
   p {
     font-size: $font-size-xl;
+    text-align: center;
     font-weight: $font-weight-bold;
+  }
+
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
   }
 }
