--- a/src/components/card/styles.module.scss
+++ b/src/components/card/styles.module.scss
@@ -4,7 +4,7 @@
   width: 700px;
   height: fit-content;
   background-color: $color-secondary-600;
-  padding: 1rem;
+  padding: 2rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,5 +34,10 @@
     background: none;
     border: none;
     cursor: pointer;
+    background-color: $color-primary;
+
+    img {
+      z-index: 1;
+    }
   }
 }
