--- a/src/components/card/styles.module.scss
+++ b/src/components/card/styles.module.scss
@@ -1,7 +1,8 @@
 @import "../../styles/variables.scss";
 
 .card {
-  width: 700px;
+  width: 100%;
+  max-width: 700px;
   height: fit-content;
   background-color: $color-secondary-600;
   padding: 2rem 1rem;
@@ -55,6 +56,21 @@
     &:hover {
       box-shadow: 0 0 20px $color-primary, 0 0 30px $color-primary,
         0 0 40px $color-primary;
+    }
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .card {
+    width: fit-content;
+    margin-inline: 1rem;
+  }
+
+  button {
+    padding: 0.5rem;
+    img {
+      width: 2rem;
+      height: 2rem;
     }
   }
 }
