--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,26 +45,26 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  position: relative;
+  height: 100vh;
+  // position: relative;
 }
 
-footer {
-  // text-align: center;
-  padding: 1rem;
-  position: absolute;
-  bottom: 0;
-  left: 40%;
-  font-size: 0.8rem;
-  color: $color-accent;
-  white-space: nowrap;
-}
+// footer {
+//   padding: 1rem;
+//   position: absolute;
+//   bottom: 0;
+//   left: 40%;
+//   font-size: 0.8rem;
+//   color: $color-accent;
+//   white-space: nowrap;
+// }
 
-@media (max-width: 375px) {
+@media (max-width: 560px) {
   body {
-    background-color: lightblue;
+    overflow: hidden;
+    // margin-inline: auto;
+    max-width: 100%;
   }
 }
