--- a/src/components/card/styles.module.scss
+++ b/src/components/card/styles.module.scss
@@ -5,13 +5,13 @@
   max-width: 700px;
   height: fit-content;
   background-color: $color-secondary-600;
-  padding: 2rem 1rem;
+  padding: 2rem 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
   border-radius: 1rem;
-  box-shadow: 10 20 1rem rgba(0, 0, 0, 0.5);
+  box-shadow: 10px 20px 1rem rgba(0, 0, 0, 0.5);
 
   header {
     color: $color-primary;
